--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -9,6 +9,25 @@
     <h1>Parágrafos e quebras de linha</h1>
     <hr>
     <p>Você pode escrever um parágrafo de qualquer jeito. Basta colar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;.</p>
-    <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt;.</p>
+    <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt;<!--LESS THAN / GREATER THAN -->.</p>
+    <P>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &delta;
+        &uparrow;
+        &uarr;
+        &downarrow;
+        &rightarrow;
+    </P>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
